--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<mat-toolbar> <span>{{title}}</span></mat-toolbar>
+<mat-toolbar> <span> <a class="LinkText" routerLink="/">{{title}}</a></span></mat-toolbar>
 <router-outlet></router-outlet>
