--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -6,7 +6,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> <a class="linksidk" routerLink="../crypto/{{element.id}}"> {{element.name}} </a></td>
+    <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> {{element.name}} </a></td>
   </ng-container>
 
   <ng-container matColumnDef="price">
