--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -2,8 +2,8 @@
   <mat-button-toggle-group name="timeToggles" class="toggles">
     <mat-button-toggle (change)="onValChange($event.value)" value="Day">Day</mat-button-toggle>
     <mat-button-toggle (change)="onValChange($event.value)" value="Week">Week</mat-button-toggle>
-    <mat-button-toggle (change)="onValChange($event.value)" value=1>Month</mat-button-toggle>
-    <mat-button-toggle (change)="onValChange($event.value)" value="3Month">3 Months</mat-button-toggle>
+    <mat-button-toggle (change)="onValChange($event.value)" value="Month">Month</mat-button-toggle>
+    <mat-button-toggle (change)="onValChange($event.value)" value="3Months">3 Months</mat-button-toggle>
     <mat-button-toggle (change)="onValChange($event.value)" value="Year">Year</mat-button-toggle>
   </mat-button-toggle-group>
   <highcharts-chart
