--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,4 +1,4 @@
-<div class="chartThing">
+<div class="chartDiv">
   <mat-button-toggle-group name="timeToggles" class="toggles">
     <mat-button-toggle (change)="onValChange($event.value)" value="Day">Day</mat-button-toggle>
     <mat-button-toggle (change)="onValChange($event.value)" value="Week">Week</mat-button-toggle>
