Highlight week btn at start

--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,5 +1,5 @@
 <div class="chartDiv">
-  <mat-button-toggle-group name="timeToggles" class="toggles">
+  <mat-button-toggle-group name="timeToggles" class="toggles" value="Week">
     <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day">Day</mat-button-toggle>
     <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
     <mat-button-toggle (change)="onPeriodChange($event.value)" value="Month">Month</mat-button-toggle>
