--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -36,7 +36,7 @@
 
   <ng-container matColumnDef="pos-neg">
     <th mat-header-cell *matHeaderCellDef> Pos/Neg </th>
-    <td mat-cell *matCellDef="let element"> {{element.relSentiment.toFixed(2)}} </td>
+    <td mat-cell *matCellDef="let element" [style.color]="element.relSentiment>1? '#26d870':'#ff7060'"> {{element.relSentiment.toFixed(2)}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
