--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]=cryptoList class="crypto-table">
+<table mat-table [dataSource]=cryptoList class="crypto-table" matSort (matSortChange)="sortData($event)" matSortActive="Mentions" matSortDirection="asc" matSortDisableClear>
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> Coin </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -10,32 +10,32 @@
   </ng-container>
 
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Price"> Price </th>
     <td mat-cell *matCellDef="let element">{{'$' + element.price}}</td>
   </ng-container>
 
   <ng-container matColumnDef="mentions">
-    <th mat-header-cell *matHeaderCellDef> Mentions </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions"> Mentions </th>
     <td mat-cell *matCellDef="let element"> {{element.mentions}} </td>
   </ng-container>
 
   <ng-container matColumnDef="mentionsPercent">
-    <th mat-header-cell *matHeaderCellDef> Mentions% </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%"> Mentions% </th>
     <td mat-cell *matCellDef="let element"> {{element.relMentions.toFixed(2) + '%'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos">
-    <th mat-header-cell *matHeaderCellDef> Pos </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos"> Pos </th>
     <td mat-cell *matCellDef="let element"> {{element.posSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="neg">
-    <th mat-header-cell *matHeaderCellDef> Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Neg"> Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.negSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos-neg">
-    <th mat-header-cell *matHeaderCellDef> Pos/Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg"> Pos/Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.relSentiment.toFixed(2)}} </td>
   </ng-container>
 
