--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]=cryptoList class="crypto-table" matSort (matSortChange)="sortData($event)" matSortActive="Price" matSortDirection="asc" matSortDisableClear>
+<table mat-table [dataSource]=cryptoList class="crypto-table" matSort matSortActive="Mentions" matSortDirection="asc" matSortDisableClear>
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> Coin </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -15,8 +15,8 @@
   </ng-container>
 
   <ng-container matColumnDef="mentions">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions"> Mentions </th>
-    <td mat-cell *matCellDef="let element"> {{element.mentions}} </td>
+    <th mat-header-cell (click)="sortData('-mentions')" *matHeaderCellDef mat-sort-header="Mentions"> Mentions </th>
+    <td mat-cell  *matCellDef="let element"> {{element.mentions}} </td>
   </ng-container>
 
   <ng-container matColumnDef="mentionsPercent">
