--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,14 +1,45 @@
-<div class="chartDiv">
-  <mat-button-toggle-group name="timeToggles" class="toggles" value="Week">
-    <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day">Day</mat-button-toggle>
-    <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
-    <mat-button-toggle (change)="onPeriodChange($event.value)" value="Month">Month</mat-button-toggle>
-    <mat-button-toggle (change)="onPeriodChange($event.value)" value="3Months">3 Months</mat-button-toggle>
-    <mat-button-toggle (change)="onPeriodChange($event.value)" value="Year">Year</mat-button-toggle>
-  </mat-button-toggle-group>
-  <highcharts-chart
-    [chart]="chart"
-    style="width: 100%; height: 400px; display: block;"
-  ></highcharts-chart>
-</div>
+<mat-sidenav-container class="example-container">
+  <mat-sidenav class="eh" opened mode="side">
+    <mat-button-toggle-group vertical multiple class="seriesToggles">
+      <mat-button-toggle>
+        <div class="Wrapper">
+          <div class="buttonID">Price</div>
+          <div class="checkboxID"><mat-checkbox class="checkboxID2"></mat-checkbox></div>
+        </div>
+      </mat-button-toggle>
+      <mat-button-toggle>
+        <div class="Wrapper">
+          <div class="buttonID">Mentions</div>
+          <div class="checkboxID"><mat-checkbox class="checkboxID2"></mat-checkbox></div>
+        </div>
+      </mat-button-toggle>
+      <mat-button-toggle>
+        <div class="Wrapper">
+          <div class="buttonID">Sentiment</div>
+          <div class="checkboxID"><mat-checkbox class="checkboxID2"></mat-checkbox></div>
+        </div>
+      </mat-button-toggle>
+      <mat-button-toggle>
+        <div class="Wrapper">
+          <div class="buttonID">Interactions</div>
+          <div class="checkboxID"><mat-checkbox class="checkboxID2"></mat-checkbox></div>
+        </div>
+      </mat-button-toggle>
+
+    </mat-button-toggle-group>
+  </mat-sidenav>
+  <div class="chartDiv">
+    <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week">
+      <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day"> Day </mat-button-toggle>
+      <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
+      <mat-button-toggle (change)="onPeriodChange($event.value)" value="Month">Month</mat-button-toggle>
+      <mat-button-toggle (change)="onPeriodChange($event.value)" value="3Months">3 Months</mat-button-toggle>
+      <mat-button-toggle (change)="onPeriodChange($event.value)" value="Year">Year</mat-button-toggle>
+    </mat-button-toggle-group>
+    <highcharts-chart
+      [chart]="chart"
+      style="width: 100%; height: 400px; display: block;"
+    ></highcharts-chart>
+  </div>
+</mat-sidenav-container>
 
