--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav class="eh" opened mode="side">
-    <mat-button-toggle-group vertical multiple class="seriesToggles">
+    <mat-button-toggle-group disabled vertical multiple class="seriesToggles">
       <mat-button-toggle>
         <div class="Wrapper">
           <div class="buttonID">Price</div>
@@ -11,7 +11,7 @@
       <mat-button-toggle>
         <div class="Wrapper">
           <div class="buttonID">Mentions</div>
-          <div class="checkboxID"><mat-checkbox class="checkboxID2" (change)="checkboxEvent($event, 'Mentions')"></mat-checkbox></div>
+          <div class="checkboxID"><mat-checkbox [checked]="true" class="checkboxID2" (change)="checkboxEvent($event, 'Mentions')"></mat-checkbox></div>
         </div>
       </mat-button-toggle>
       <mat-button-toggle>
@@ -39,7 +39,7 @@
     </mat-button-toggle-group>
     <highcharts-chart
       [chart]="chart"
-      style="width: 100%; height: 400px; display: block;"
+      style="width: 1200px; height: 400px; display: block;"
     ></highcharts-chart>
   </div>
 </mat-sidenav-container>
