--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -21,7 +21,7 @@
 
   <ng-container matColumnDef="mentionsPercent">
     <th mat-header-cell *matHeaderCellDef> Mentions% </th>
-    <td mat-cell *matCellDef="let element"> {{element.relMentions.toFixed(2) + '%'}} </td>
+    <td mat-cell *matCellDef="let element" [style.color]="element.relMentions>0? '#26d870':'#ff7060'"> {{element.relMentions.toFixed(2) + '%'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos">
