--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -1,6 +1,7 @@
 .chartDiv{
   padding-top: 30px;
   margin-left: 60px;
+  height: 400px;
   width: 1200px;
 }
 
@@ -14,6 +15,10 @@
 }
 .mat-button-toggle-checked{
   background-color: #7bb4eb;
+}
+
+.mat-button-toggle-disabled {
+  color: #FFFFFF;
 }
 
 .example-container {
