--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,3 +1,4 @@
+<body>
 <mat-sidenav-container class="example-container">
   <mat-sidenav class="eh" opened mode="side">
     <mat-button-toggle-group disabled vertical multiple class="seriesToggles">
@@ -29,7 +30,7 @@
 
     </mat-button-toggle-group>
   </mat-sidenav>
-  <div class="chartDiv">
+  <div class="chartDiv" id="chartDiv">
     <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week">
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day"> Day </mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
@@ -37,10 +38,11 @@
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="3Months">3 Months</mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Year">Year</mat-button-toggle>
     </mat-button-toggle-group>
-    <highcharts-chart
+    <highcharts-chart (load)="resizeChart()"
       [chart]="chart"
       style="width: 100%; height: 400px; display: block;"
     ></highcharts-chart>
   </div>
 </mat-sidenav-container>
+</body>
 
