--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -10,7 +10,7 @@
   </ng-container>
 
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Price"> Price </th>
+    <th mat-header-cell *matHeaderCellDef> Price </th>
     <td mat-cell *matCellDef="let element">{{'$' + element.price}}</td>
   </ng-container>
 
@@ -20,22 +20,22 @@
   </ng-container>
 
   <ng-container matColumnDef="mentionsPercent">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%"> Mentions% </th>
-    <td mat-cell *matCellDef="let element"> {{element.relMentions.toFixed(2) + '%'}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%" (click)="this.params.get('sortParam') === 'relMentions' ?  sortData('-relMentions') : sortData('relMentions')"> Mentions% </th>
+    <td mat-cell *matCellDef="let element" > {{element.relMentions.toFixed(2) + '%'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos"> Pos </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos" (click)="this.params.get('sortParam') === 'posSentiment' ?  sortData('-posSentiment') : sortData('posSentiment')"> Pos </th>
     <td mat-cell *matCellDef="let element"> {{element.posSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="neg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Neg"> Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Neg" (click)="this.params.get('sortParam') === 'negSentiment' ?  sortData('-negSentiment') : sortData('negSentiment')"> Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.negSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos-neg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg"> Pos/Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg" (click)="this.params.get('sortParam') === 'relSentiment' ?  sortData('-relSentiment') : sortData('relSentiment')"> Pos/Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.relSentiment.toFixed(2)}} </td>
   </ng-container>
 
