--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]=cryptoList class="crypto-table" matSort matSortActive="Mentions" matSortDirection="asc" matSortDisableClear>
+<table mat-table [dataSource]=cryptoList class="crypto-table" matSort matSortActive="Mentions" matSortStart="desc" matSortDirection="desc" matSortDisableClear>
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> Coin </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -15,27 +15,27 @@
   </ng-container>
 
   <ng-container matColumnDef="mentions">
-    <th mat-header-cell (click)="this.params.get('sortParam') === 'mentions' ?  sortData('-mentions') : sortData('mentions')" *matHeaderCellDef mat-sort-header="Mentions"> Mentions </th>
+    <th mat-header-cell (click)="this.params.get('sortParam') === '-mentions' ?  sortData('mentions') : sortData('-mentions')" *matHeaderCellDef mat-sort-header="Mentions"> Mentions </th>
     <td mat-cell  *matCellDef="let element"> {{element.mentions}} </td>
   </ng-container>
 
   <ng-container matColumnDef="mentionsPercent">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%" (click)="this.params.get('sortParam') === 'relMentions' ?  sortData('-relMentions') : sortData('relMentions')"> Mentions% </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%" (click)="this.params.get('sortParam') === '-relMentions' ?  sortData('relMentions') : sortData('-relMentions')"> Mentions% </th>
     <td mat-cell *matCellDef="let element" > {{element.relMentions.toFixed(2) + '%'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos" (click)="this.params.get('sortParam') === 'posSentiment' ?  sortData('-posSentiment') : sortData('posSentiment')"> Pos </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos" (click)="this.params.get('sortParam') === '-posSentiment' ?  sortData('posSentiment') : sortData('-posSentiment')"> Pos </th>
     <td mat-cell *matCellDef="let element"> {{element.posSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="neg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Neg" (click)="this.params.get('sortParam') === 'negSentiment' ?  sortData('-negSentiment') : sortData('negSentiment')"> Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Neg" (click)="this.params.get('sortParam') === '-negSentiment' ?  sortData('negSentiment') : sortData('-negSentiment')"> Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.negSentiment}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos-neg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg" (click)="this.params.get('sortParam') === 'relSentiment' ?  sortData('-relSentiment') : sortData('relSentiment')"> Pos/Neg </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg" (click)="this.params.get('sortParam') === '-relSentiment' ?  sortData('relSentiment') : sortData('-relSentiment')"> Pos/Neg </th>
     <td mat-cell *matCellDef="let element"> {{element.relSentiment.toFixed(2)}} </td>
   </ng-container>
 
