--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -5,7 +5,7 @@
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="Name" (click)="this.params.get('sortParam') === 'name' ?  sortData('-name') : sortData('name')"> Name </th>
     <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> {{element.name}} </a></td>
   </ng-container>
 
