--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -15,10 +15,12 @@
   </ng-container>
 
   <ng-container matColumnDef="mentions">
-    <th mat-header-cell (click)="this.params.get('sortParam') === '-mentions' ? sortData('mentions'): sortData('-mentions')"
-        *matHeaderCellDef mat-sort-header="Mentions"
-        matTooltip="The amount of social media posts in the last 24 hours"
-        matTooltipPosition="above" [matTooltipShowDelay]="500"> Mentions </th>
+    <th mat-header-cell (click)="this.params.get('sortParam') === '-mentions' ? sortData('mentions'): sortData('-mentions')" *matHeaderCellDef>
+      <div mat-sort-header="Mentions" id="Mentions" matTooltip="The amount of social media posts in the last 24 hours"
+           matTooltipPosition="above" [matTooltipShowDelay]="500">
+        Mentions
+      </div>
+    </th>
     <td mat-cell  *matCellDef="let element"> {{element.mentions}} </td>
   </ng-container>
 
