--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -16,7 +16,7 @@
 
   <ng-container matColumnDef="mentions">
     <th mat-header-cell (click)="this.params.get('sortParam') === '-mentions' ? sortData('mentions'): sortData('-mentions')" *matHeaderCellDef>
-      <div mat-sort-header="Mentions" id="Mentions" matTooltip="The amount of social media posts in the last 24 hours"
+      <div mat-sort-header="Mentions" matTooltip="The amount of social media posts in the last 24 hours"
            matTooltipPosition="above" [matTooltipShowDelay]="500">
         Mentions
       </div>
@@ -25,17 +25,32 @@
   </ng-container>
 
   <ng-container matColumnDef="mentionsPercent">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Mentions%" (click)="this.params.get('sortParam') === '-relMentions' ?  sortData('relMentions') : sortData('-relMentions')"> 24h change </th>
+    <th mat-header-cell *matHeaderCellDef (click)="this.params.get('sortParam') === '-relMentions' ?  sortData('relMentions') : sortData('-relMentions')">
+      <div mat-sort-header="Mentions%" matTooltip="The change in mentions in the last 24 hours"
+           matTooltipPosition="above" [matTooltipShowDelay]="500">
+        24h change
+      </div>
+    </th>
     <td mat-cell *matCellDef="let element" [style.color]="element.relMentions>0? '#26d870':'#ff7060'"> {{element.relMentions.toFixed(2) + '%'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="interactions">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Interactions" (click)="this.params.get('sortParam') === '-mostInteractions' ?  sortData('mostInteractions') : sortData('-mostInteractions')"> Interactions </th>
+    <th mat-header-cell *matHeaderCellDef (click)="this.params.get('sortParam') === '-mostInteractions' ?  sortData('mostInteractions') : sortData('-mostInteractions')">
+      <div mat-sort-header="Interactions" matTooltip="The total amount of interactions for all social media posts in the last 24 hours"
+           matTooltipPosition="above" [matTooltipShowDelay]="500">
+        Interactions
+      </div>
+    </th>
     <td mat-cell *matCellDef="let element"> {{element.mostInteractions}} </td>
   </ng-container>
 
   <ng-container matColumnDef="pos-neg">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="Pos/Neg" (click)="this.params.get('sortParam') === '-relSentiment' ?  sortData('relSentiment') : sortData('-relSentiment')"> Pos/Neg </th>
+    <th mat-header-cell *matHeaderCellDef (click)="this.params.get('sortParam') === '-relSentiment' ?  sortData('relSentiment') : sortData('-relSentiment')">
+      <div mat-sort-header="Pos/Neg" matTooltip="The ratio of positive and negative sentiment of social media posts in the last 24 hours"
+           matTooltipPosition="above" [matTooltipShowDelay]="500">
+        Pos/Neg
+      </div>
+    </th>
     <td mat-cell *matCellDef="let element" [style.color]="element.relSentiment>1? '#26d870':'#ff7060'"> {{element.relSentiment.toFixed(2)}} </td>
 
   </ng-container>
