--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -1,12 +1,8 @@
 <table mat-table [dataSource]=cryptoList class="crypto-table" matSort matSortActive="Mentions" matSortStart="desc" matSortDirection="desc" matSortDisableClear>
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Coin </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="Name" (click)="this.params.get('sortParam') === 'name' ?  sortData('-name') : sortData('name')"> Name </th>
-    <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> {{element.name}} </a></td>
+    <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> <div class="idText"><img [src]="'https://lcw.nyc3.cdn.digitaloceanspaces.com/production/currencies/32/btc.webp'"  alt="LUL"/>{{element.id}}</div> <div class="nameText">{{element.displayName}}</div> </a></td>
   </ng-container>
 
   <ng-container matColumnDef="price">
