--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -2,7 +2,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="Name" (click)="this.params.get('sortParam') === 'name' ?  sortData('-name') : sortData('name')"> Name </th>
-    <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> <div class="idText"><img [src]="'https://lcw.nyc3.cdn.digitaloceanspaces.com/production/currencies/32/btc.webp'"  alt="LUL"/>{{element.id}}</div> <div class="nameText">{{element.displayName}}</div> </a></td>
+    <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}"> <div class="idText"><img [src]="element.icon"  alt="LUL"/>{{element.id}}</div> <div class="nameText">{{element.displayName}}</div> </a></td>
   </ng-container>
 
   <ng-container matColumnDef="price">
