--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -4,8 +4,11 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header="Name" (click)="this.params.get('sortParam') === 'name' ?  sortData('-name') : sortData('name')"> Name </th>
     <td mat-cell *matCellDef="let element"> <a class="LinkToCrypto" routerLink="../crypto/{{element.id}}">
       <div class="nameHeaderDiv">
-        <div class="idText"><img [src]="element.icon"  alt="tokenIcon"/>{{element.id}}</div>
-        <div class="nameText">{{element.displayName}}</div>
+        <div class="tokenIcon"><img [src]="element.icon"  alt="tokenIcon"/></div>
+        <div>
+          <div class="idText">{{element.id}}</div>
+          <div class="nameText">{{element.displayName}}</div>
+        </div>
       </div>
     </a></td>
 
