--- a/src/app/cryptocurrencies/cryptocurrencies.component.html
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.html
@@ -6,8 +6,8 @@
       <div class="nameHeaderDiv">
         <div class="tokenIcon"><img [src]="element.icon"  alt="tokenIcon"/></div>
         <div>
-          <div class="idText">{{element.id}}</div>
-          <div class="nameText">{{element.displayName}}</div>
+          <div class="idText">{{element.displayName}}</div>
+          <div class="nameText">{{element.id}}</div>
         </div>
       </div>
     </a></td>
@@ -56,7 +56,7 @@
         Pos/Neg
       </div>
     </th>
-    <td mat-cell *matCellDef="let element" [style.color]="element.relSentiment>1? '#26d870':'#ff7060'"> {{element.relSentiment.toFixed(2)}} </td>
+    <td mat-cell *matCellDef="let element" [style.color]="element.relSentiment>1? '#26d870': (element.relSentiment===1 ? '#FFFFFF':'#ff7060')"> {{element.relSentiment.toFixed(2)}} </td>
 
   </ng-container>
 
