--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
   padding: 30px;
+  background: rgb(9,10,11);
+  background: linear-gradient(160deg, rgba(9,10,11,1) 15%, rgba(77,119,168,1) 60%, rgba(164,207,244,1) 96%);
 }
 
 .mat-table{
