--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<mat-toolbar> <span> <a class="LinkText" routerLink="/">{{title}}</a></span></mat-toolbar>
+<mat-toolbar> <span> <a class="LinkText" routerLink="/">{{title}}</a></span>
+  <div id="searchBarDiv">
+  <mat-icon id="searchIcon">search</mat-icon>
+  <mat-form-field id="searchBar">
+    <input type="text" matInput placeholder="">
+  </mat-form-field>
+  </div>
+</mat-toolbar>
 <router-outlet></router-outlet>
