--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,11 +17,16 @@
 #searchBar {
   font-size: 20px;
   width: 250px;
+  float: left;
 }
 
 #searchBarDiv {
   padding-left: 70%;
+  display: flex;
+  width: 300px;
+  align-items: center;
 }
 
 #searchIcon {
+  float:left;
 }
