lmao this is fucked

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,6 +24,7 @@
   display: flex;
   width: 300px;
   padding-left: 70%;
+  position: absolute;
 
 }
 
@@ -32,16 +33,40 @@
 }
 
 #searchResult {
-  background-color: #00B7FFFF;
+  /* Remove default list styling */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  z-index: 10;
   font-size: 15px;
   position: relative;
+}
+
+#searchResult li{
+  border: 1px solid #ddd; /* Add a border to all links */
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6; /* Grey background color */
+  padding: 12px; /* Add some padding */
+  text-decoration: none; /* Remove default text underline */
+  font-size: 18px; /* Increase the font-size */
+  color: black; /* Add a black text color */
+  display: block; /* Make it into a block element to fill the whole list */
+}
+
+#searchResultDiv{
+  width: 200px;
+  position: relative;
+  float: right;
+  margin-right: 10%;
+  margin-top: 31px;
 }
 
 .nameHeaderDiv {
   display: flex;
   width: 150px;
   align-items: center;
-  
+
 }
 
 .tokenIcon {
