--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 <div id="searchResultDiv">
   <ul id="searchResult" *ngFor="let crypto of placeholder">
     <li>
+      <a  routerLink="../crypto/{{crypto[0]}}" id="link" (click)="reloadPage(crypto[0])">
       <div id="nameHeaderDiv">
         <div id="tokenIcon"><img [src]="crypto[2]" alt="tokenIcon"/></div>
         <div>
@@ -17,6 +18,7 @@
           <div id="idText">{{crypto[0]}}</div>
         </div>
       </div>
+      </a>
     </li>
   </ul>
 </div>
