fucked shit no longer fucked

--- a/src/app/cryptocurrencies/cryptocurrencies.component.css
+++ b/src/app/cryptocurrencies/cryptocurrencies.component.css
@@ -1,6 +1,10 @@
 #crypto-table {
-  margin-left: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
   margin-right: auto;
+  margin-left: auto;
+  width: 50px; /* Does nothing but wont work without :shrug: */
   background-color: #1C1D214d;
   box-shadow: none !important;
   transition: none !important;
