--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 30px;
   background: rgb(9,10,11);
-  background: linear-gradient(160deg, rgba(9,10,11,1) 15%, rgba(77,119,168,1) 60%, rgba(164,207,244,1) 96%);
+  background: linear-gradient(160deg, rgba(9,10,11,1) 15%, rgba(77,119,168,1) 60%, rgba(164,207,244,1) 96%) fixed;
 }
 
 .mat-table{
@@ -18,4 +18,5 @@ body {
   float: right;
   margin: 8px;
 }
-html { background-color: #171b26; }
+
+html {height: 100%}
