--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,7 @@
   width: 300px;
   margin-left: 70%;
   position: absolute;
-
+  align-items: center;
 }
 
 #searchIcon {
@@ -69,6 +69,7 @@
 
 #tokenIcon {
   padding-right: 15px;
+  float: left;
 }
 
 #nameText {
