--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar> <span> <a class="LinkText" routerLink="/">{{title}}</a></span>
+<mat-toolbar id="toolbar"> <span> <a class="LinkText" routerLink="/">{{title}}</a></span>
   <div id="searchBarDiv">
       <mat-icon id="searchIcon">search</mat-icon>
       <mat-form-field id="searchBar">
