--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,17 +46,21 @@
   margin-top: -1px; /* Prevent double borders */
   background-color: #1C1D21FC; /* Grey background color */
   padding: 6px;
-  border: 1px solid #ddd; /* Add a border to all links */
+  border: 1px solid #383838; /* Add a border to all links */
   text-decoration: none; /* Remove default text underline */
-  color: white; /* Add a black text color */
+  color: #383838; /* Add a black text color */
   display: block; /* Make it into a block element to fill the whole list */
+}
+
+#searchResult :hover{
+  background-color: rgb(43, 65, 80);
 }
 
 #searchResultDiv{
   width: 275px;
   position: relative;
   float: right;
-  margin-top: 32px;
+  margin-top: 31px;
 }
 
 #nameHeaderDiv {
