--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
   <div class="chartDiv" id="chartDiv">
     <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week">
@@ -12,4 +13,4 @@
     ></highcharts-chart>
   </div>
 </div>
-
+</body>
