--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -1,13 +1,16 @@
 <body>
 <div class="container">
-  <div class="chartDiv" id="chartDiv">
-    <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week">
+  <div class="cryptoNavBar">
+    <h1 id="TokenName">Bitcoon</h1>
+    <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week" >
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day"> Day </mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Month">Month</mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="3Months">3 Months</mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Year">Year</mat-button-toggle>
     </mat-button-toggle-group>
+  </div>
+  <div class="chartDiv" id="chartDiv">
     <highcharts-chart (load)="resizeChart()" [chart]="chart"
       style="width: 100%; height: 400px; display: block;"
     ></highcharts-chart>
