--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="cryptoNavBar">
     <h1 id="TokenName">Bitcoon</h1>
-    <mat-button-toggle-group  name="timeToggles" class="toggles" value="Week" >
+    <mat-button-toggle-group  name="timeToggles" class="timeToggles" value="Week" >
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Day"> Day </mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Week">Week</mat-button-toggle>
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Month">Month</mat-button-toggle>
@@ -10,10 +10,20 @@
       <mat-button-toggle (change)="onPeriodChange($event.value)" value="Year">Year</mat-button-toggle>
     </mat-button-toggle-group>
   </div>
+
   <div class="chartDiv" id="chartDiv">
     <highcharts-chart (load)="resizeChart()" [chart]="chart"
       style="width: 100%; height: 400px; display: block;"
     ></highcharts-chart>
+  </div>
+
+  <div class="toggleSeriesDiv">
+    <mat-button-toggle-group multiple name="seriesToggles" class="seriesToggle" value="Mentions" >
+      <div class="seriesBtnDiv"><mat-button-toggle class="seriesBtn" (change)="onSeriesToggle($event.value)" value="Price"> Price </mat-button-toggle></div>
+      <div class="seriesBtnDiv"><mat-button-toggle class="seriesBtn" (change)="onSeriesToggle($event.value)" value="Mentions"> Mentions </mat-button-toggle></div>
+      <div class="seriesBtnDiv"><mat-button-toggle class="seriesBtn" (change)="onSeriesToggle($event.value)" value="Sentiment"> Sentiment </mat-button-toggle></div>
+      <div class="seriesBtnDiv"><mat-button-toggle class="seriesBtn" (change)="onSeriesToggle($event.value)" value="Interactions"> Interactions </mat-button-toggle></div>
+    </mat-button-toggle-group>
   </div>
 </div>
 </body>
