--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   width: 80%;
-  height: 100%;
+  height: 200%;
   margin-top: 1%;
   margin-right: auto;
   margin-left: auto;
@@ -84,6 +84,32 @@
 .mat-button-toggle-disabled {
   color: #FFFFFF;
 }
+
+.segmentContainer{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  height: 400px;
+  background-color: #26d870;
+}
+
+.tokenInfoDiv{
+  background-color: red;
+  width: 45%;
+  height: 95%;
+  margin: auto;
+}
+
+.socialMediaSegmentDiv{
+  margin: auto;
+  background-color: blue;
+  width: 45%;
+  height: 95%
+}
+
 
 
 
