--- a/src/app/crypto-view/crypto-view.component.css
+++ b/src/app/crypto-view/crypto-view.component.css
@@ -118,11 +118,11 @@
   margin: auto;
 }
 
-.socialMediaSegmentDiv{
+.wordcloudDiv{
   margin: auto;
-  background-color: blue;
+  background-color: #00B7FF;
   width: 45%;
-  height: 95%
+  height: 95%;
 }
 
 
