--- a/src/app/crypto-view/crypto-view.component.html
+++ b/src/app/crypto-view/crypto-view.component.html
@@ -18,10 +18,7 @@
     </mat-button-toggle-group>
   </div>
 
-  <div class="chartDiv" id="chartDiv">
-    <highcharts-chart [chart]="chart"
-      style="width: 100%; height: 400px; display: block;"
-    ></highcharts-chart>
+  <div id="chartDiv" class="chartDiv">
   </div>
 
   <div class="toggleSeriesDiv">
@@ -35,12 +32,10 @@
 
   <div class="segmentContainer">
     <div class="tokenInfoDiv">
-      
     </div>
 
-    <div class="socialMediaSegmentDiv">
+    <div class="wordcloudDiv" id="wordcloudDiv"></div>
 
-    </div>
   </div>
 </div>
 </body>
