--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,22 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
   padding: 30px;
-  background: rgb(9,10,11);
-  background: linear-gradient(160deg, rgba(9,10,11,1) 15%, rgba(77,119,168,1) 60%, rgba(164,207,244,1) 96%) fixed;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .mat-table{
