--- a/src/styles.css
+++ b/src/styles.css
@@ -4,22 +4,8 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
   padding: 30px;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  height: 100vh;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+  background: hsla(255, 62%, 31%, 1);
+  background: linear-gradient(190deg, hsla(255, 62%, 31%, 1) 0%, hsla(190, 83%, 38%, 1) 100%) fixed;
 }
 
 .mat-table{
