--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 30px;
   background: hsla(255, 62%, 31%, 1);
-  background: linear-gradient(190deg, hsla(255, 62%, 31%, 1) 0%, hsla(190, 83%, 38%, 1) 100%) fixed;
+  background: linear-gradient(120deg, hsl(260, 67%, 34%) 0%, hsl(190, 90%, 28%) 100%) fixed;
 }
 
 .mat-table{
